methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:18: error: method makeV overrides nothing
override def makeV(){
             ^